CHANGES

 - remove default repository root from npg::samplesheet
 - no longer stop runs without batch id or with 13-digit entries in the
   batch id field from moving from run mirrored to analysis pending (
   allows automatic analysis of GCLP and QC runs reespectively).
 - optionally change group ownership of certain analysis directories on
   moving runfolder form incoming to analysis

release 81.0
 - remove default config file
 - allow environment variable NPG_REPOSITORY_ROOT to set repository root
 - move config of staging areas and repository into a config file
 - remove vestigial code for dealing with manual qc state
 - remove good_bad column in run_lane table
 - remove manual_qc_status table
 - npg daemon 'local' host option avoids ssh

release 80.11
 - removed staging area sf48

release 80.10
 - default to in-memory option for SQLite in tests
 - added a method to transparently return live or dev LIMs base URL
 - reference genome values - trim white space

release 80.9
 - do not try to infer phix reference from library/sample name
 - correct regular expression for modern MiSeq reagent kits - previously
   part of the id starting from teh dash was not returned by the flowcel_id accessor
   in the short_info role
 - samplesheet generation: library id shoudl be defined for all samples

release 80.8
 - fix memory leak in the samplesheet driver for st::api::lims -
   pass data hash by reference

release 80.7
 - change reference repository host

release 80.6
 - reenable and clean up cBot monitoring
 - try to avoid recursion in st::api::lims
 - cope with no reference genome info in XML
 - provisions for ml_warehouse driver
 - change host for development tracking server
 - when building the package, change version in existing directories only

release 80.5
 - remove redundant status update method from DBIx run_lane table binding
 - remove unused methods from npg::api::xx objects
 - remove auto-change of run statuses RT#420151